--- a/static/css/signin.css
+++ b/static/css/signin.css
@@ -41,7 +41,7 @@ select {
 }
 
 .form-signin {
-    width: 100%;
+    width: 300%;
     /* max-width: 600px; */
     padding: 15px;
     margin: 0 auto;
@@ -68,4 +68,58 @@ select {
     margin-bottom: 10px;
     border-top-left-radius: 0;
     border-top-right-radius: 0;
+}
+
+/* 基本按钮样式 */
+.custom-button {
+    display: inline-block;
+    padding: 20px 30px;
+    background-color: #ffffff;
+    /* border: 1px solid #f8f9fa; */
+    color: #3c4043;
+    text-decoration: none; /* 移除链接下划线 */
+    position: relative;
+    overflow: hidden;
+    transition: background-color 0.3s, color 0.3s;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-size: 30px; /* 增大字号 */
+    font-weight: bold; /* 加粗文本 */
+    box-shadow: 0 0 10px #3c4043;
+    margin: 10px;
+}
+
+/* 悬停时的按钮样式 */
+.custom-button:hover {
+    background-color: #3c4043;
+    text-decoration: none; /* 移除链接下划线 */
+    color: #ffffff;
+}
+
+/* 添加阴影效果 */
+.custom-button::before {
+    content: "";
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    height: 10px;
+    background: rgba(0, 0, 0, 0.2);
+    transform: scaleY(0);
+    transform-origin: bottom;
+    transition: transform 0.3s;
+}
+
+.custom-button:hover::before {
+    transform: scaleY(1);
+}
+
+/* 添加图标元素 */
+.custom-button .icon {
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    /* background-color: #3c4043; */
+    margin-right: 10px; /* 调整图标与文本之间的间距 */
+    position: relative;
+    /* transition: background-color 0.3s; */
 }
