--- a/static/css/style.css
+++ b/static/css/style.css
@@ -298,3 +298,37 @@ input[type=range]::-webkit-slider-thumb {
 	white-space: nowrap;
 }
 
+.question {
+	position: relative;
+	display: inline-block;
+}
+
+.question .question-tip {
+	visibility: hidden;
+	width: 300px;
+	background-color: black;
+	color: #fff;
+	text-align: center;
+	border-radius: 6px;
+	padding: 5px 0;
+	position: absolute;
+	z-index: 1;
+	bottom: 150%;
+	left: 50%;
+	margin-left: -150px;
+}
+
+.question .question-tip::after {
+	content: "";
+	position: absolute;
+	top: 100%;
+	left: 50%;
+	margin-left: -5px;
+	border-width: 5px;
+	border-style: solid;
+	border-color: black transparent transparent transparent;
+}
+
+.question:hover .question-tip {
+	visibility: visible;
+}
