--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
     <div class="container-fluid">
         <div class="navigation" style="background-image: linear-gradient(to bottom, #054863, #0d3245); padding-top: 1%; padding-bottom: 1%; display:flex; align-items: center; justify-content:center;">
             <div class="logo">
-                <a href="http://82.156.152.182:9001/"><img src="/src/image/logo-index.jpg" width="288" height="64"></a>
+                <a href="https://genetic-flow.com/"><img src="/src/image/logo-index.jpg" width="288" height="64"></a>
             </div>
             <div class="clearfix"></div>
         </div>
@@ -212,7 +212,6 @@
                                 <span id="topic-label" style="font-size: 12px;">0.5</span>
                             </div>
                             
-                            
                             <div class="slider-container">
                                 <label for="range-slider" style="font-size: 12px;">Range:</label>
                                 <!-- <input type="range" id="range-slider" min="0" max="100" value="0" multiple>
@@ -375,6 +374,7 @@
                         window.addEventListener('resize', onFullscreenChange);
                     });
                 </script>
+
                 <!--img src="data:image/png;base64,">
                 <svg id="mainsvg" style="background-color: white; border-width: 0px;" width="900" height="560" viewBox="0 0 0 0"></svg>
                 <div id="svg">
@@ -382,6 +382,7 @@
                 </div>
                 <canvas width="850" height="560" style="display:none"></canvas-->
             </div>
+
             <div class="right-column" style="margin-left: -0.6%;">
                 <ul id="paper-list" class="address">
                     <li>
@@ -398,18 +399,16 @@
                     </li>
                 </ul>
 
-                <ul id="paper-panel" class="address">
+                <ul id="selector" class="address">
                     <li>
-                        <ul id="selector" class="address-text" style="background-color: #054863; border-top-right-radius: 7px;">
-                            <li style="width: 33%; font-size: 16px; margin-top: 4%; margin-bottom: 3%; padding-left: 8%;">
+                        <ul class="address-text" style="background-color: #054863; border-top-left-radius: 10px; border-top-right-radius: 10px;">
+                            <li style="width: 35%; font-size: 16px; margin-top: 4%; margin-bottom: 3%; padding-left: 5%;">
                                 <button id="paper-info">Paper Info</button>
                             </li>
-                            <li style="width: 1%; font-size: 24px; margin-top: 2%; ">|</li>
-                            <li style="width: 28%; font-size: 16px; margin-top: 4%; margin-bottom: 3%; padding-left: 3%;">
+                            <li style="width: 28%; font-size: 16px; margin-top: 4%; margin-bottom: 3%; padding-left: 0%;">
                                 <button id="references">References</button>
                             </li>
-                            <li style="width: 1%; font-size: 24px; margin-top: 2%; ">|</li>
-                            <li style="width: 28%; font-size: 16px; margin-top: 4%; margin-bottom: 3%; padding-left: 4%;">
+                            <li style="width: 28%; font-size: 16px; margin-top: 4%; margin-bottom: 3%; padding-left: 5%;">
                                 <button id="citations">Citations</button>
                             </li>
                             <script>
@@ -434,88 +433,79 @@
                             </script>
                         </ul>
                     </li>
+                </ul>
+                <ul id="node-info" class="address" style="padding-bottom: 10%; border-top-left-radius: 0%; border-top-right-radius: 0%;">
                     <li>
-                        <ul id="node-info" class="address" style="border-top-left-radius: 0%; border-top-right-radius: 0%;">
-                            <li>
-                                <ul class="address-text abstract-minus-height">
-                                    <li style="width: 40%; margin-top: 3%;"><b style="margin-left: 25.5%;">paperID</b></li>
-                                    <li id="paper-id" style="color: #333; margin-top: 3%; margin-left: 10%;"></li>
-                                </ul>
-                            </li>
-                            <li>
-                                <ul class="address-text abstract-minus-height">
-                                    <li style="width: 40%; margin-top: 3%;"><b style="margin-top: 10%; margin-left: 25.5%;">title</b></li>
-                                    <li id="paper-name" style="color: #333; width: 85%; margin-top: 3%; margin-left: 10%;"></li>
-                                </ul>
-                            </li>
-                            <li>
-                                <ul class="address-text abstract-minus-height">
-                                    <li style="width: 40%; margin-top: 3%;"><b style="margin-left: 25.5%;">year</b></li>
-                                    <li id="paper-year" style="color: #333; margin-top: 3%; margin-left: 10%;"></li>
-                                </ul>
-                            </li>
-                            <li>
-                                <ul class="address-text abstract-minus-height">
-                                    <li style="width: 40%; margin-top: 3%;"><b style="margin-left: 25.5%;">topic</b></li>
-                                    <li id="paper-field" style="color: #333; width: 85%; margin-top: 3%; margin-left: 10%;"></li>
-                                </ul>
-                            </li>
-                            <li>
-                                <ul class="address-text">
-                                    <li class="abstract-minus-height" style="width: 40%; margin-top: 3%;"><b style=" margin-left: 25.5%;">abstract</b></li>
-                                    <li id="abstract" style="overflow: auto; width: 85%; background-color: white; color: #333; margin-top: 3%; margin-left: 10%;"></li>
-                                </ul>
+                        <ul class="address-text abstract-minus-height">
+                            <li style="width: 40%; margin-top: 3%;"><b style="margin-left: 25.5%;">paperID</b></li>
+                            <li id="paper-id" style="color: #333; margin-top: 3%; margin-left: 10%;"></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <ul class="address-text abstract-minus-height">
+                            <li style="width: 40%; margin-top: 3%;"><b style="margin-top: 10%; margin-left: 25.5%;">title</b></li>
+                            <li id="paper-name" style="color: #333; width: 85%; margin-top: 3%; margin-left: 10%;"></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <ul class="address-text abstract-minus-height">
+                            <li style="width: 40%; margin-top: 3%;"><b style="margin-left: 25.5%;">year</b></li>
+                            <li id="paper-year" style="color: #333; margin-top: 3%; margin-left: 10%;"></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <ul class="address-text abstract-minus-height">
+                            <li style="width: 40%; margin-top: 3%;"><b style="margin-left: 25.5%;">topic</b></li>
+                            <li id="paper-field" style="color: #333; width: 85%; margin-top: 3%; margin-left: 10%;"></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <ul class="address-text">
+                            <li class="abstract-minus-height" style="width: 40%; margin-top: 3%;"><b style=" margin-left: 25.5%;">abstract</b></li>
+                            <li id="abstract" style="overflow: auto; width: 85%; background-color: white; color: #333; margin-top: 3%; margin-left: 10%;"></li>
+                        </ul>
+                    </li>
+                </ul>
+
+                <ul id="up-line" class="address" style="border-top-left-radius: 0%; border-top-right-radius: 0%;">
+                    <li>
+                        <ul class="address-text">
+                            <li id="cited-papers" class="demo-tree demo-tree-box" style="width: 90%; overflow: auto; margin-left: 5%;"></li>
+                        </ul>
+                    </li>
+                </ul>
+                <ul id="down-line" class="address" style="border-top-left-radius: 0%; border-top-right-radius: 0%;">
+                    <li>
+                        <ul class="address-text">
+                            <li id="citing-papers" class="demo-tree demo-tree-box" style="width: 90%; overflow: auto; margin-left: 5%;"></li>
+                        </ul>
+                    </li>
+                </ul>
+
+                <ul id="edge-info" class="address" style="padding-bottom: 10%;">
+                    <li>
+                        <ul class="address-text citation-context-minus-height" style="background-color: #054863; border-top-left-radius: 10px; border-top-right-radius: 10px;">
+                            <li style="width: 100%; font-size: 16px; margin-top: 4%; margin-bottom: 3%;">
+                                <p>Citation Relationship</p>
                             </li>
                         </ul>
                     </li>
-
                     <li>
-                        <ul id="up-line" class="address" style="border-top-left-radius: 0%; border-top-right-radius: 0%;">
-                            <li>
-                                <ul class="address-text">
-                                    <li id="cited-papers" class="demo-tree demo-tree-box" style="width: 90%; overflow: auto; margin-left: 5%;"></li>
-                                </ul>
-                            </li>
+                        <ul class="address-text citation-context-minus-height">
+                            <li style="width: 40%"><b style="margin-left: 25%;">cited paper</b></li>
+                            <li id="source-paper" style="color: #333; margin-left: 10%; margin-right: 5%;"></li>
                         </ul>
                     </li>
-
                     <li>
-                        <ul id="down-line" class="address" style="border-top-left-radius: 0%; border-top-right-radius: 0%;">
-                            <li>
-                                <ul class="address-text">
-                                    <li id="citing-papers" class="demo-tree demo-tree-box" style="width: 90%; overflow: auto; margin-left: 5%;"></li>
-                                </ul>
-                            </li>
+                        <ul class="address-text citation-context-minus-height">
+                            <li style="width: 40%"><b style="margin-left: 25%;">citing paper</b></li>
+                            <li id="target-paper" style="color: #333; margin-left: 10%; margin-right: 5%;"></li>
                         </ul>
                     </li>
-
                     <li>
-                        <ul id="edge-info" class="address" style="padding-bottom: 10%;">
-                            <li>
-                                <ul class="address-text" style="background-color: #054863; border-top-left-radius: 10px; border-top-right-radius: 10px;">
-                                    <li style="width: 100%; font-size: 16px; margin-top: 4%; margin-bottom: 3%;">
-                                        <p>Citation Relationship</p>
-                                    </li>
-                                </ul>
-                            </li>
-                            <li>
-                                <ul class="address-text citation-context-minus-height">
-                                    <li style="width: 40%"><b style="margin-left: 25%;">cited paper</b></li>
-                                    <li id="source-paper" style="color: #333; margin-left: 10%;"></li>
-                                </ul>
-                            </li>
-                            <li>
-                                <ul class="address-text citation-context-minus-height">
-                                    <li style="width: 40%"><b style="margin-left: 25%;">citing paper</b></li>
-                                    <li id="target-paper" style="color: #333; margin-left: 10%;"></li>
-                                </ul>
-                            </li>
-                            <li>
-                                <ul class="address-text">
-                                    <li class="citation-context-minus-height" style="width: 50%"><b style="margin-left: 20%;">citation context</b></li>
-                                    <li id="citation-context" style="overflow: auto; width: 85%; background-color: white; color: #333; margin-top: 3%; margin-left: 10%;"></li>
-                                </ul>
-                            </li>
+                        <ul class="address-text">
+                            <li class="citation-context-minus-height" style="width: 50%"><b style="margin-left: 20%;">citation context</b></li>
+                            <li id="citation-context" style="overflow: auto; width: 85%; background-color: white; color: #333; margin-top: 3%; margin-left: 10%;"></li>
                         </ul>
                     </li>
                 </ul>
@@ -531,24 +521,23 @@
     <script type="text/javascript">
         // text1 paperLabel; text2 paperCount; text3 year; text4 field
         $(function () {
-            $("#selector").hide();
-            $("#node-info").hide();
-            $("#up-line").hide();
-            $("#down-line").hide();
-            $("#edge-info").hide();
+            $("#selector, #node-info, #up-line, #down-line, #edge-info").hide();
             const authorRank = "{{ authorRank }}";
-            const name = "{{ name }}";
+            name = "{{ name }}";
             const fields = {{ fields|safe }};
             const field = "{{ field }}";
             field_roots = fields[0];
             field_leaves = fields[1];
             
-            current_topic_div = 1;
-            const filename = '/src/json/' + field + '/' + String(authorRank) + '_0_0.5_0.5_10_1.json';
+            var filename = '/src/json/' + field + '/' + String(authorRank) + '_0_0.5_0.5_10_1.json';
+            if (field == "acl") {
+                $("#edge-value").text(">=0.4");
+                filename = '/src/json/' + field + '/' + String(authorRank) + '_0_0.5_0.4_10_1.json';
+            }
             d3.json(filename).then( data => {
-                years = data[1];      //年份节点
-                nodes = data[2];      //论文节点
-                edges = data[3];      //path
+                years = data[1];            //年份节点
+                nodes = data[2];            //论文节点
+                edges = data[3];            //path
                 polygon = data[4];    //箭头
                 const params = data[0];
                 viewBox = params[0];
@@ -604,17 +593,9 @@
                 url: "/update/",
                 data: paramData,
                 success: function (param) {
-                    $("#mainsvg").remove();
-                    $("#tagcloud").remove();
+                    $("#mainsvg, #tagcloud, #abstract, #citation-context, #timeline").remove();
+                    $("#selector, #node-info, #up-line, #down-line, #edge-info").hide();
                     d3.tip().destroy();
-                    $("#abstract").empty();
-                    $("#citation-context").empty();
-                    $("#selector").hide();
-                    $("#node-info").hide();
-                    $("#up-line").hide();
-                    $("#down-line").hide();
-                    $("#edge-info").hide();
-                    $("#timeline").empty();
                     var detail = param['detail'];
                     var field = param['field'];
                     var filename = '/src/json/' + field + '/' + detail + '.json';
@@ -622,23 +603,13 @@
                         years = data[1];
                         nodes = data[2];
                         edges = data[3];
-                        const polygon = data[4];
+                        polygon = data[4];
                         const params = data[0];
                         const viewBox = params[0];
                         const transform = params[1];
                         for (let i = 0; i < nodes.length; i++) {
                             nodes[i]['flag'] = 0;
                         }
-
-                        // init_graph(viewBox, transform);
-                        // update_nodes();
-                        // var fieldCount = update_fields();
-                        // draw_tag_cloud(fieldCount);
-                        // visual_graph(polygon);
-                        // visual_topics(fieldCount);
-                        // updateSider("{{ name }}");
-                        // outline_color_change();
-                        // outline_thickness_change();
                         name = "{{name}}";
                         onFullscreenChange();
                     });
