--- a/static/css/style.css
+++ b/static/css/style.css
@@ -118,10 +118,10 @@ ul.address-text p {
 	/* top: 10px;
 	right: 10px; */
 	/* background-color: white; */
-	padding: 5px;
-	border-radius: 5px;
-	transition: background-color 0.3s ease-in-out;
-	overflow: hidden;
+	/* padding: 5px;
+	border-radius: 5px; */
+	/* transition: background-color 0.3s ease-in-out; */
+	/* overflow: hidden; */
 	/* margin-left: 40%; */
 	right: 24%;
 }
@@ -225,7 +225,7 @@ tr:hover {
 .noUi-connect {
 	height: 6px !important;
 	border-radius: 3px !important;
-	background-color: #1e88e5 !important;
+	background-color: #40a6ff !important;
 }
 
 .noUi-base, 
@@ -235,7 +235,7 @@ input[type=range]{
 	border-radius: 3px;
 	outline: none !important;
 	-webkit-appearance: none;/*清除系统默认样式*/
-	background-color: #90caf9 !important;
+	background-color: #b3ddff !important;
 }
 /*自定义滑动控件的滑块*/
 .noUi-handle, 
