--- a/templates/index.html
+++ b/templates/index.html
@@ -110,8 +110,10 @@
                             </li>
                             <li style="width: 10%; float: left; color: #777; margin-top: 0.5%; margin-bottom: 0.5%;">
                                 <select id="fill-color" class="form-select" name="fillColor" style="display: inline-block; color:#333; width: 60%; padding-top: 0.2em; padding-bottom: 0.2em;">
-                                    <option value="1">paper topic</option>
-                                    <option value="0">none</option>
+                                    <option value="0">paper topic</option>
+                                    <option value="1">blue</option>
+                                    <option value="2">isKeyPaper</option>
+                                    <option value="3">citationCount</option>
                                 </select>
                                 <script type="text/javascript">
                                     $("#fill-color").change(fill_color_change);
@@ -303,6 +305,10 @@
                         // 在这里执行其他操作
                         d3.select("#mainsvg").remove();
                         d3.select("#tagcloud").remove();
+                        $("#edge-info").hide();
+                        $("#up-line").hide();
+                        $("#down-line").hide();
+                        $("#node-info").hide();
                         
                         const windowHeight = $(window).height();
                         const navigationHeight = $('.navigation').toArray().reduce(function(sum, element) {
@@ -310,6 +316,7 @@
                         }, 0);
                         mainPanalHeight = windowHeight - navigationHeight;
                         mainPanalWidth = $('.main-panel').width();
+                        virtualOpacity = 0.05;
 
                         $('.main-panel').css('max-height', mainPanalHeight);
                         $('.right-column').css('max-height', mainPanalHeight * 0.98);
@@ -449,8 +456,26 @@
                     </li>
                     <li>
                         <ul class="address-text abstract-minus-height">
+                            <li style="width: 40%; margin-top: 3%;"><b style="margin-top: 10%; margin-left: 25.5%;">authors</b></li>
+                            <li id="paper-authors" style="color: #333; width: 85%; margin-top: 3%; margin-left: 10%;"></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <ul class="address-text abstract-minus-height">
+                            <li style="width: 40%; margin-top: 3%;"><b style="margin-left: 25.5%;">venue</b></li>
+                            <li id="paper-venue" style="color: #333; margin-top: 3%; margin-left: 10%;"></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <ul class="address-text abstract-minus-height">
                             <li style="width: 40%; margin-top: 3%;"><b style="margin-left: 25.5%;">year</b></li>
                             <li id="paper-year" style="color: #333; margin-top: 3%; margin-left: 10%;"></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <ul class="address-text abstract-minus-height">
+                            <li style="width: 40%; margin-top: 3%;"><b style="margin-left: 25.5%;">#citation</b></li>
+                            <li id="paper-citation" style="color: #333; margin-top: 3%; margin-left: 10%;"></li>
                         </ul>
                     </li>
                     <li>
@@ -490,6 +515,18 @@
                             </li>
                         </ul>
                     </li>
+                    <li>
+                        <ul class="address-text citation-context-minus-height">
+                            <li style="width: 40%;"><b style="margin-left: 25%;">extend type</b></li>
+                            <li id="extend-type" style="color: #333; margin-left: 10%; margin-right: 5%;"></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <ul class="address-text citation-context-minus-height">
+                            <li style="width: 40%;"><b style="margin-left: 25%;">extend prob</b></li>
+                            <li id="extend-prob" style="color: #333; margin-left: 10%; margin-right: 5%;"></li>
+                        </ul>
+                    <li>
                     <li>
                         <ul class="address-text citation-context-minus-height">
                             <li style="width: 40%"><b style="margin-left: 25%;">cited paper</b></li>
