--- a/templates/search.html
+++ b/templates/search.html
@@ -22,38 +22,32 @@
 			<p id="error" style="color: red">{{ error }}</p>
             <div style="display: flex; width: 60%; margin-left: 20%; margin-bottom: 1%;">
 				<!-- <img src="/src/image/search.png" style="order: -1; height: 38px;"> -->
-				<div class="card" style="height: 50px; width: 30%; border-top-left-radius: 24px; border-bottom-left-radius: 24px;">
+				<div class="card" style="background-color: #f5f5f5; height: 50px; width: 30%; border-top-left-radius: 24px; border-bottom-left-radius: 24px;">
 					<div id="scholar-field" class="card-body" style="padding-top: 13px; border-right: none;">
 						{{ field }} Scholar
 					</div>
 				</div>
-                <input name="name" type="text" class="form-control" placeholder="Please enter the author's name" autofocus="" style="height: 50px; width: 70%; border-top-right-radius: 24px; border-bottom-right-radius: 24px;">
+
+				<input id="authorInput" name="name" type="text" class="form-control" placeholder="Please enter the author's name" autofocus="" style="height: 50px; width: 70%; border-top-right-radius: 24px; border-bottom-right-radius: 24px;">
             </div>
 			<br />
             <div style="display: inline;">
-				{% if field %}
-                	<a id="listLink" class="btn btn-primary" href="/list?field={{ field }}" style="background-color: #f8f9fa; border-color: #f8f9fa; color: #3c4043; margin-right: 10px;">Scholar List</a>
-				{% else %}
-					<a id="listLink" class="btn btn-primary" href="/list?field=visualization" style="background-color: #f8f9fa; border-color: #f8f9fa; color: #3c4043; margin-left: 10px;">Scholar List</a>
-				{% endif %}
-				<a id="searchLink" class="btn btn-primary" style="background-color: #f8f9fa; border-color: #f8f9fa; color: #3c4043;">Scholar Search</a>
+				<a id="listLink" class="btn btn-primary" href="/list?field={{ field }}" style="background-color: #f5f5f5; border-color: #f5f5f5; color: #3c4043; margin-right: 10px;">Scholar List</a>
+				<a id="searchLink" class="btn btn-primary" style="background-color: #f5f5f5; border-color: #f5f5f5; color: #3c4043;">Scholar Search</a>
 				<script>
 					$("#listLink")
 						.on("mouseover", () => $("#listLink").css("border-color", "#a9a9a9"))
-						.on("mouseout", () => $("#listLink").css("border-color", "#f8f9fa"));
+						.on("mouseout", () => $("#listLink").css("border-color", "#f5f5f5"));
 					$("#searchLink")
 						.on("mouseover", () => $("#searchLink").css("border-color", "#a9a9a9"))
-						.on("mouseout", () => $("#searchLink").css("border-color", "#f8f9fa"));
+						.on("mouseout", () => $("#searchLink").css("border-color", "#f5f5f5"));
 				</script>
 			</div>
 			<br />
 			<br />
-			<p class="mt-5 mb-3 text-muted">© 2023-2024</p>
-			<a href=" " target="_blank">京ICP备2022000473号-2</a>
-			<br />
-			<br />
+			<p class="mt-5 text-muted" style="margin-bottom:0.5%">© 2023-2024<a href=" " target="_blank" style="margin-left: 2em;">京ICP备2022000473号-2</a></p>
 			<p style="white-space: pre-wrap; text-align: center;">Please send any enquiry/feedback to: <b>geneticflowcontact@gmail.com</b>,
-and see our <a href="reference">KDD/VIS 2023 paper</a> for more details.
+and see our <a href="/reference">KDD/VIS 2023 paper</a> for more details.
 			</p>
 		</form>
 		<script type="text/javascript">
@@ -71,13 +65,8 @@ and see our <a href="reference">KDD/VIS 2023 paper</a> for more details.
 			// 	}
 			// })
 			var field = "{{ field }}";
-			if (field == 'acl') {
-				$("#scholar-field").text("NLP Scholar");
-			}
-			else if (field == 'visualization') {
-				$("#scholar-field").text("Visualization" + " Scholar");
-			}
-			$("#searchLink").click(function(event) {
+
+			function scholarSearch(event) {
 				event.preventDefault();
 				name = $(".form-control").val();
 				if (name == '') {
@@ -85,10 +74,24 @@ and see our <a href="reference">KDD/VIS 2023 paper</a> for more details.
 				}
 				else {
 					$("#error").empty();
-					var field = "{{ field }}";
-					console.log(field);
-					window.location.href = "list?field=" + field + "&name=" +name;
+					window.location.href = "/list?field=" + field + "&name=" +name;
 				}
+			}
+			
+			if (field == 'acl') {
+				$("#scholar-field").text("NLP Scholar");
+			}
+			else if (field == 'visualization') {
+				$("#scholar-field").text("Visualization" + " Scholar");
+			}
+			$("#searchLink").click(scholarSearch);
+
+			$('form').on('submit', function(event) {
+				event.preventDefault();
+			});
+
+			$("#authorInput").on('keydown', function(event) {
+				if (event.key === 'Enter') scholarSearch(event); 
 			});
 		</script>
 	</body>
