--- a/templates/reference.html
+++ b/templates/reference.html
@@ -2,16 +2,23 @@
     <p style="white-space: pre-wrap;">@inproceedings{luo2023impact,
     title={Impact-Oriented Contextual Scholar Profiling using Self-Citation Graphs},
     author={Luo, Yuankai and Shi, Lei and Xu, Mufan and Ji, Yuwen and Xiao, Fengli and Hu, Chunming and Shan, Zhiguang},
-    booktitle={Proceedings of the 29th ACM SIGKDD Conference on Knowledge Discovery and Data Mining},
+    booktitle={Proceedings of the 29th ACM SIGKDD Conference on Knowledge Discovery and Data Mining (KDD)},
+    pages = {4572--4583}
     year={2023}
 }
 
 @inproceedings{xiao2023GeneticFlow,
     author = {Xiao, Fengli and Shi, Lei},
     title = {GeneticFlow: Exploring Scholar Impact with Interactive Visualization},
-    booktitle = {2023 IEEE Visualization Conference (VIS)},
+    booktitle = {IEEE Visualization Conference (VIS)},
+    year = {2023}
+}
+
+@inproceedings{luo2023Transformers,
+    author = {Luo, Yuankai and Thost, Veronika and Shi, Lei},
+    title = {Transformers over Directed Acyclic Graphs},
+    booktitle = {Neural Information Processing Systems (NeurIPS)},
     year = {2023},
-    organization={IEEE}
 }
     </p>
 </html>
