--- a/templates/front.html
+++ b/templates/front.html
@@ -34,7 +34,7 @@
 			<br />
 			<p class="mt-5 text-muted" style="margin-bottom:0.5%">© 2023-2024<a href=" " target="_blank" style="margin-left: 2em;">京ICP备2022000473号-2</a></p>
 			<p style="white-space: pre-wrap; text-align: center;">Please send any enquiry/feedback to: <b>geneticflowcontact@gmail.com</b>,
-and see our <a href="reference">KDD/VIS 2023 paper</a> for more details.
+and see our <a href="reference">KDD/VIS/NeurIPS 2023 papers</a> for more details.
 			</p>
 		</form>
 	</body>
