--- a/templates/index.html
+++ b/templates/index.html
@@ -209,17 +209,17 @@
                             <div id="topic-distribution"></div>
                             
                             <div class="slider-container">
-                                <label for="topic-slider" style="font-size: 12px;">Size:</label>
+                                <label for="topic-slider" style="margin-right: 3%;">Size:</label>
                                 <input id="topic-slider" class="topic-slider"  type="range" value="1" min="0" max="2" step="0.01">
-                                <span id="topic-label" style="font-size: 12px;">0.5</span>
+                                <span id="topic-label" style="margin-left: 3%;">0.5</span>
                             </div>
                             
                             <div class="slider-container">
-                                <label for="range-slider" style="font-size: 12px;">Range:</label>
+                                <label for="range-slider" style="margin-right: 3%;">Range:</label>
                                 <!-- <input type="range" id="range-slider" min="0" max="100" value="0" multiple>
                                  -->
                                 <div id="range-slider" style="width:80%"></div>
-                                <span id="range-label" style="font-size: 12px;">0-100</span>
+                                <span id="range-label" style="margin-left: 3%;">0-100</span>
                             </div>
 
                             <script>
