--- a/static/css/style.css
+++ b/static/css/style.css
@@ -363,3 +363,8 @@ input[type=range]::-webkit-slider-thumb {
 	top: 100%;
 	left: 0;
   }
+
+.paperNode:hover {
+	background-color: #b3ddff;
+	transition: background-color 0.3s;
+}
