--- a/templates/list.html
+++ b/templates/list.html
@@ -100,7 +100,7 @@
             }
             else if (fieldType == "acl") {
                 field = "NLP";
-                question_content = "The scholar metrics below are obtained from all the paper publications in ACL Anthology Reference Corpus (ARC), till 2021.7. All paper citation counts are native data from ARC.";
+                question_content = "The scholar metrics below are obtained from all the paper publications in ACL Anthology Reference Corpus (ARC), till 2021.7. All paper citation counts are native data from Microsoft Academic Graph (MAG).";
             }
             var content = `
             <div class="question">
