--- a/templates/front.html
+++ b/templates/front.html
@@ -17,7 +17,7 @@
 	<body class="text-center">
 		<form class="form-signin">
             <input type="hidden" name="csrfmiddlewaretoken" value="Yse6cgbnpqJr4Xjn1flWIVqE5knZ5Ty44Z0GtTvzdxFypbn46s9aILmj2eTgPCWJ">
-			<img class="mb-4" src="/src/image/logo-search.jpg" alt="" width="390" height="140.4">
+			<a href="/"><img class="mb-4" src="/src/image/logo-search.jpg" alt="" width="390" height="140.4"></a>
 			<br />
             <div style="display: inline;">
                 <!-- <a id="visualizationLink" class="btn btn-front" href="search/?field=visualization" style="background-color: #f8f9fa; border-color: #f8f9fa; color: #3c4043;">visualization</a> -->
