--- a/templates/list.html
+++ b/templates/list.html
@@ -20,7 +20,7 @@
         <div class="navigation" style="background-image: linear-gradient(to bottom, #054863, #0d3245); padding-bottom: 2%; padding-top: 2%;">
             <div class="logo" style="margin-left: 8%;">
                 <!--h1><span>G</span>eneticFlow</h1-->
-                <img src="/src/image/logo-index.jpg" width="324" height="72">
+                <a href="/"><img src="/src/image/logo-index.jpg" width="324" height="72"></a>
             </div>
             <div class="clearfix"></div>
         </div>
