--- a/templates/search.html
+++ b/templates/search.html
@@ -16,7 +16,7 @@
 	<body class="text-center">
 		<form class="form-signin">
             {%csrf_token%}
-			<img class="mb-4" src="/src/image/logo-search.jpg" alt="" width="390" height="140.4">
+			<a href="/"><img class="mb-4" src="/src/image/logo-search.jpg" alt="" width="390" height="140.4"></a>
 			<!--h1 class="h3 mb-3 font-weight-normal" style="margin-left: -15%; margin-right: -15%;">Please enter the author's name</h1-->
             <br />
 			<p id="error" style="color: red">{{ error }}</p>
