--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
     <div class="container-fluid">
         <div class="navigation" style="background-image: linear-gradient(to bottom, #054863, #0d3245); padding-top: 1%; padding-bottom: 1%; display:flex; align-items: center; justify-content:center;">
             <div class="logo">
-                <a href="https://genetic-flow.com/"><img src="/src/image/logo-index.jpg" width="288" height="64"></a>
+                <a href="/"><img src="/src/image/logo-index.jpg" width="288" height="64"></a>
             </div>
             <div class="clearfix"></div>
         </div>
@@ -221,58 +221,6 @@
                                 <div id="range-slider" style="width:80%"></div>
                                 <span id="range-label" style="margin-left: 3%;">0-100</span>
                             </div>
-
-                            <script>
-                                $("#topic-slider").change(function () {
-                                    var topic_r = $("#topic-slider").val();
-                                    d3.selectAll(".topic-map")
-                                        .transition()
-                                        .duration(300)
-                                        .attr("r", d => Math.sqrt(d.num) * 10 * topic_r);
-                                    $("#topic-label").text(topic_r);
-                                })
-
-                                const rangeSlider = document.getElementById("range-slider");
-                                const rangeLabel = document.getElementById("range-label");
-
-                                noUiSlider.create(rangeSlider, {
-                                    start: [0, 100], // 初始值
-                                    connect: true,   // 连接两个滑块
-                                    range: {
-                                        'min': 0,
-                                        'max': 100
-                                    },
-                                    step: 1
-                                });
-
-                                // 监听滑块值的变化
-                                rangeSlider.noUiSlider.on("update", function (values, handle) {
-                                    const min = Math.round(values[0]);
-                                    const max = Math.round(values[1]);
-                                    rangeLabel.textContent = `${min}-${max}`;
-
-                                    d3.selectAll(".topic-map")
-                                    .transition()
-                                    .duration(300)
-                                    .attr("opacity", d => {
-                                        if (d.num >= min && d.num <= max) return 1;
-                                        return 0;
-                                    })
-                                    .attr("pointer-events", d => {
-                                        if (d.num >= min && d.num <= max) return "all";
-                                        return "none";
-                                    });
-
-                                    
-                                    paper_field = update_fields();
-                                    // filter paper filed with num between min and max
-                                    paper_field = paper_field.filter(item => item.num >= min && item.num <= max);
-                                    d3.select("#tagcloud").remove();
-                                    draw_tag_cloud();
-                                    // visual_topics();
-
-                                });
-                            </script>
                         </div>
                     </li>
                 </ul>
@@ -287,123 +235,6 @@
                     <button id="fullscreen" class="icon-button" style="background-image: url('/src/image/fullscreen.png');"></button>
                     <button id="save" class="icon-button" style="background-image: url('/src/image/save.png');"></button>
                 </div>
-                <script type="text/javascript">
-                    function toggleFullscreen() {
-                        const container = document.getElementsByClassName("middle-column")[0];
-
-                        // 检查是否已经处于全屏状态
-                        const isFullscreen = document.fullscreenElement || document.webkitFullscreenElement;
-
-                        if (!isFullscreen) {
-                            // 进入全屏
-                            if (container.requestFullscreen) {
-                                container.requestFullscreen().then(() => {
-                                    document.addEventListener("fullscreenchange", onFullscreenChange);
-                                    document.addEventListener("keydown", onEscKeyPressed);
-                                }).catch(error => {
-                                    console.error('Error entering fullscreen:', error);
-                                });
-                            } else if (container.webkitRequestFullscreen) {
-                                container.webkitRequestFullscreen().then(() => {
-                                    document.addEventListener("webkitfullscreenchange", onFullscreenChange);
-                                    document.addEventListener("keydown", onEscKeyPressed);
-                                }).catch(error => {
-                                    console.error('Error entering fullscreen:', error);
-                                });
-                            }
-                        } else {
-                            // 退出全屏
-                            if (document.exitFullscreen) {
-                                document.exitFullscreen();
-                            } else if (document.webkitExitFullscreen) {
-                                document.webkitExitFullscreen();
-                            }
-                        }
-                    }
-
-
-                    function onFullscreenChange() {
-                        // 在这里执行其他操作
-                        d3.select("#mainsvg").remove();
-                        d3.select("#tagcloud").remove();
-                        $("#edge-info").hide();
-                        $("#up-line").hide();
-                        $("#down-line").hide();
-                        $("#node-info").hide();
-                        
-                        const windowHeight = $(window).height();
-                        const navigationHeight = $('.navigation').toArray().reduce(function(sum, element) {
-                            return sum + $(element).outerHeight();
-                        }, 0);
-                        mainPanalHeight = windowHeight - navigationHeight;
-                        mainPanalWidth = $('.main-panel').width();
-                        virtualOpacity = 0.05;
-
-                        $('.main-panel').css('max-height', mainPanalHeight);
-                        $('.right-column').css('max-height', mainPanalHeight * 0.98);
-
-                        init_graph(viewBox, transform);
-                        update_nodes();
-                        paper_field = update_fields();
-                        
-                        draw_tag_cloud();
-                        visual_topics();
-                        visual_graph(polygon);
-                        
-                        // let maxHeight = $("#mainsvg").height() + $("#tagcloud").height();
-                        // $(".middle-column").css('height', maxHeight);
-                        console.log(name);
-                        updateSider(name);
-                        // console.log('left height2', left_height);
-                        // $("paper-list").css('height', maxHeight);
-
-                        outline_color_change();
-                        outline_thickness_change();
-                    }
-
-                    function onEscKeyPressed(event) {
-                        if (event.key === "Escape") {
-                            if (document.exitFullscreen) {
-                                document.exitFullscreen();
-                            } else if (document.webkitExitFullscreen) {
-                                document.webkitExitFullscreen();
-                            }
-                        }
-                    }
-
-                    $(document).ready(function() {
-                        $("#save").click(function () {
-                            var zoomSvg = getZoomSvg('#mainsvg', '#maingroup');
-                            var fileName = "{{ name|safe }}" + " GF profile.jpg";
-                            downloadSvg(zoomSvg, fileName);
-                        })
-                        // $("#fullscreen").click($("#fullscreen").click(toggleFullscreen));
-                        document.getElementById("fullscreen").addEventListener("click", toggleFullscreen);
-                        $("#zoom-in").click(function() {
-                            d3.select('#mainsvg').transition().duration(500).call(zoom.scaleBy, 1.1);
-                        })
-                        $("#zoom-out").click(function() {
-                            d3.select('#mainsvg').transition().duration(500).call(zoom.scaleBy, 0.9);
-                        })
-                        $("#restore").click(function() {
-                            d3.select('#mainsvg').transition().duration(500).call(zoom.transform, d3.zoomIdentity);
-                        })
-
-                        // 初始设置，第一个按钮加粗，透明度为1，其他按钮透明度为0.5
-                        $(".address-text button:first").css({ 'font-weight': 'bold', 'opacity': 1 });
-
-                        // 点击按钮时的事件处理
-                        $(".address-text button").click(function () {
-                            // 将所有按钮的字体设为正常，透明度为0.5
-                            $(".address-text button").css({ 'font-weight': 'normal', 'opacity': 0.5 });
-
-                            // 将点击的按钮加粗，透明度为1
-                            $(this).css({ 'font-weight': 'bold', 'opacity': 1 });
-                        });
-
-                        window.addEventListener('resize', onFullscreenChange);
-                    });
-                </script>
 
                 <!--img src="data:image/png;base64,">
                 <svg id="mainsvg" style="background-color: white; border-width: 0px;" width="900" height="560" viewBox="0 0 0 0"></svg>
@@ -580,6 +411,7 @@
     <!--初始js-->
     <script type="text/javascript">
         // text1 paperLabel; text2 paperCount; text3 year; text4 field
+        
         $(function () {
             $("#selector, #node-info, #up-line, #down-line, #edge-info").hide();
             const authorRank = "{{ authorRank }}";
@@ -614,14 +446,27 @@
                 for (let i = 0; i < field_leaves.length; i++) {
                     field_leaves[i][2] = field_leaves[i][2].replaceAll('_', ' ');
                 }
+
+                rangeSlider = document.getElementById("range-slider");
+                rangeLabel = document.getElementById("range-label");
+                noUiSlider.create(rangeSlider, {
+                    start: [0, 100], // 初始值
+                    connect: true,   // 连接两个滑块
+                    range: {
+                        'min': 0,
+                        'max': 100
+                    },
+                    step: 1
+                });
                 
                 onFullscreenChange();
 
                 $("#overall-topic-map").hide();
                 $("#paper-topic-map").show();
                 // sugiyama(years, nodes, edges);
+                addAllListeners();
             });
-        })
+        });
     </script>
 
     <!--ajax提交表单-->
